# S26-MMML

./: .gitignore  CLAUDE.md  pyproject.toml  workspace
evaluate/: datasets.py  inference.py  metrics.py  prompts.py  run.py
scripts/evaluate/qwen3-vl-32b/: 3-history.sh  naive-reasoning.sh  structured-reasoning.sh  zero-shot.sh  zone-ocr.sh
scripts/evaluate/qwen3-vl-8b/: 3-history.sh  naive-reasoning.sh  structured-reasoning.sh  zero-shot.sh  zone-ocr.sh
